--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,11 +24,26 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'com.android.support:design:30.0.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+ //added retrofit dependencies
+    implementation("com.squareup.moshi:moshi:1.9.3")
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    //gson library
+    implementation 'com.google.code.gson:gson:2.8.6'
+    //Glide library
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
+    // Logging
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+
+    //An okHttp interceptor which logs HTTP requests and data response
+
+    implementation 'com.squareup.okhttp3:okhttp:3.14.9'
 }
